[package]
name = "tanker_client"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanker_common = { path = "../tanker_common/" }
bevy = "0.12"
bevy_replicon = "0.21.2"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
dotenvy_macro = "0.15.7"
