[package]
name = "tanker_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tanker_common = { path = "../tanker_common/" }
bevy = "0.12.1"
bevy_replicon = "0.21.2"
serde = { version = "1.0.196", features = ["derive"] }
anyhow = "1.0.79"
dotenvy_macro = "0.15.7"
